# automated-selenium

./: LICENSE  README.md  pyproject.toml
automated_selenium/: __init__.py
automated_selenium/drivers/: undetected_driver.py
automated_selenium/pages/: base_page.py
automated_selenium/resources/: resources.py
