[tool.poetry]
name = "automated-selenium"
version = "0.1.0"
description = "Automated-Selenium is a Python library that provides a base page class designed to facilitate the implementation of the Page Object Model (POM) structure in Selenium-based test automation projects."
authors = ["Waqar Khan <waqarkhan1252617@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "automated_selenium"}]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.9.1"
webdriver-manager = "^3.8.6"
undetected-chromedriver = "^3.4.7"
pyautogui = "^0.9.53"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
